# src/Mimo.Api.Sdk/Generated/Models/CreateOpportunityRequest.cs
@@ -1,0 +1,118 @@
+// <auto-generated/>
+#pragma warning disable CS0618
+using Microsoft.Kiota.Abstractions.Extensions;
+using Microsoft.Kiota.Abstractions.Serialization;
+using System.Collections.Generic;
+using System.IO;
+using System;
+namespace Mimo.Api.Sdk.Models
+{
+    [global::System.CodeDom.Compiler.GeneratedCode("Kiota", "1.0.0")]
+    #pragma warning disable CS1591
+    public partial class CreateOpportunityRequest : IAdditionalDataHolder, IParsable
+    #pragma warning restore CS1591
+    {
+        /// <summary>Stores additional data not described in the OpenAPI description found when deserializing. Can be used for serialization as well.</summary>
+        public IDictionary<string, object> AdditionalData { get; set; }
+        /// <summary>The amount property</summary>
+        public double? Amount { get; set; }
+        /// <summary>The assignedAgentId property</summary>
+        public Guid? AssignedAgentId { get; set; }
+        /// <summary>The contactEmail property</summary>
+#if NETSTANDARD2_1_OR_GREATER || NETCOREAPP3_1_OR_GREATER
+#nullable enable
+        public string? ContactEmail { get; set; }
+#nullable restore
+#else
+        public string ContactEmail { get; set; }
+#endif
+        /// <summary>The contactName property</summary>
+#if NETSTANDARD2_1_OR_GREATER || NETCOREAPP3_1_OR_GREATER
+#nullable enable
+        public string? ContactName { get; set; }
+#nullable restore
+#else
+        public string ContactName { get; set; }
+#endif
+        /// <summary>The contactPhone property</summary>
+#if NETSTANDARD2_1_OR_GREATER || NETCOREAPP3_1_OR_GREATER
+#nullable enable
+        public string? ContactPhone { get; set; }
+#nullable restore
+#else
+        public string ContactPhone { get; set; }
+#endif
+        /// <summary>The conversationId property</summary>
+        public Guid? ConversationId { get; set; }
+        /// <summary>The notes property</summary>
+#if NETSTANDARD2_1_OR_GREATER || NETCOREAPP3_1_OR_GREATER
+#nullable enable
+        public string? Notes { get; set; }
+#nullable restore
+#else
+        public string Notes { get; set; }
+#endif
+        /// <summary>The title property</summary>
+#if NETSTANDARD2_1_OR_GREATER || NETCOREAPP3_1_OR_GREATER
+#nullable enable
+        public string? Title { get; set; }
+#nullable restore
+#else
+        public string Title { get; set; }
+#endif
+        /// <summary>
+        /// Instantiates a new <see cref="global::Mimo.Api.Sdk.Models.CreateOpportunityRequest"/> and sets the default values.
+        /// </summary>
+        public CreateOpportunityRequest()
+        {
+            AdditionalData = new Dictionary<string, object>();
+            Amount = 0;
+        }
+        /// <summary>
+        /// Creates a new instance of the appropriate class based on discriminator value
+        /// </summary>
+        /// <returns>A <see cref="global::Mimo.Api.Sdk.Models.CreateOpportunityRequest"/></returns>
+        /// <param name="parseNode">The parse node to use to read the discriminator value and create the object</param>
+        public static global::Mimo.Api.Sdk.Models.CreateOpportunityRequest CreateFromDiscriminatorValue(IParseNode parseNode)
+        {
+            if(ReferenceEquals(parseNode, null)) throw new ArgumentNullException(nameof(parseNode));
+            return new global::Mimo.Api.Sdk.Models.CreateOpportunityRequest();
+        }
+        /// <summary>
+        /// The deserialization information for the current model
+        /// </summary>
+        /// <returns>A IDictionary&lt;string, Action&lt;IParseNode&gt;&gt;</returns>
+        public virtual IDictionary<string, Action<IParseNode>> GetFieldDeserializers()
+        {
+            return new Dictionary<string, Action<IParseNode>>
+            {
+                { "amount", n => { Amount = n.GetDoubleValue(); } },
+                { "assignedAgentId", n => { AssignedAgentId = n.GetGuidValue(); } },
+                { "contactEmail", n => { ContactEmail = n.GetStringValue(); } },
+                { "contactName", n => { ContactName = n.GetStringValue(); } },
+                { "contactPhone", n => { ContactPhone = n.GetStringValue(); } },
+                { "conversationId", n => { ConversationId = n.GetGuidValue(); } },
+                { "notes", n => { Notes = n.GetStringValue(); } },
+                { "title", n => { Title = n.GetStringValue(); } },
+            };
+        }
+        /// <summary>
+        /// Serializes information the current object
+        /// </summary>
+        /// <param name="writer">Serialization writer to use to serialize this model</param>
+        public virtual void Serialize(ISerializationWriter writer)
+        {
+            if(ReferenceEquals(writer, null)) throw new ArgumentNullException(nameof(writer));
+            writer.WriteDoubleValue("amount", Amount);
+            writer.WriteGuidValue("assignedAgentId", AssignedAgentId);
+            writer.WriteStringValue("contactEmail", ContactEmail);
+            writer.WriteStringValue("contactName", ContactName);
+            writer.WriteStringValue("contactPhone", ContactPhone);
+            writer.WriteGuidValue("conversationId", ConversationId);
+            writer.WriteStringValue("notes", Notes);
+            writer.WriteStringValue("title", Title);
+            writer.WriteAdditionalData(AdditionalData);
+        }
+    }
+}
+#pragma warning restore CS0618
